--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 </head>
 <body>
  <h1>Bienvenidos a nuestro sitio web</h1>
+ <footer>
+    <p>&copy; ACME Todos los derechos reservados</p>
+ </footer>
  <script src="./js/scripts.js"></script>
 </body>
 </html>
