--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 </head>
 <body>
  <h1>Bienvenidos a nuestro sitio web</h1>
+ <section>
+   <p>Lorem ipsum dolor sit amet consectetur.</p>
+</section>
  <script src="./js/scripts.js"></script>
 </body>
 </html>
